--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,10 @@ Date: 2013/10/30
 Title: spatial nonparametric covariance functions
 Author: Ottar N. Bjornstad <onb1@psu.edu>
 Maintainer: Ottar N. Bjornstad <onb1@psu.edu>
-Depends: R (>= 2.8.0)
+Depends:
+	R (>= 3.2.0),
+	fields,
+	data.table
 Description: R functions for analyzing spatial (cross-)covariance: the
         nonparametric (cross-)covariance, the spline correlogram, the
         nonparametric phase coherence function, and related.
