--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,5 +41,7 @@ S3method(plot,lisa)
 S3method(plot,Sncf2D)
 S3method(summary,Sncf2D)
 S3method(plot,cc.offset)
-
+import(data.table)
+importFrom(fields,rdist.earth)
+importFrom(fields,rdist)
 
